--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <nav>
 
                         <ul>
-                            <li><a href="#header"> Home</a></li>
+                            <li><a href="#header"> ome</a></li>
                             <li><a href="#About"> About</a></li>
                             <li><a href="#services"> Services</a></li>
                             <li><a href="#portfolio"> Portfolio</a></li>
