--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <nav>
 
                         <ul>
-                            <li><a href="#header"> ome</a></li>
+                            <li><a href="#header">Home</a></li>
                             <li><a href="#About"> About</a></li>
                             <li><a href="#services"> Services</a></li>
                             <li><a href="#portfolio"> Portfolio</a></li>
@@ -36,7 +36,7 @@
     <div id="About">
         <div class="container">
             <div class="row">
-                <div class="col1"><img src="E:\source\portfolio\Picture\nav.png" /></div>
+                <div class="col1"><img src="Picture\nav.png" /></div>
                 <div class="col2">
                     <h1 class="sub-title">About Me</h1>
                     <p>
