--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="E:\source\portfolio\Picture\sos1.png" alt="Error" />
+                    <img src="Picture\sos1.png" alt="Error" />
                     <div class="layer">
                         <h3>SoS APP </h3>
                         <p>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="E:\source\portfolio\Picture\sos2.png" alt="Error" />
+                    <img src="Picture\sos2.png" alt="Error" />
                     <div class="layer">
                         <h3>CONTACT DETAILS</h3>
                         <p>
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="E:\source\portfolio\Picture\sos3.png" alt="Error" />
+                    <img src="Picture\sos3.png" alt="Error" />
                     <div class="layer">
                         <h3>Authentication </h3>
                         <p>
